<resources>
    <string name="app_name">poppy_playtime</string>
    <string name="titulo">Personagens</string>
    <string name="tituloMenu">Menu</string>
    <string name="tituloHistoria">Historia</string>
    <string name="tituloJogabilidade">Jogabilidade</string>
    <string name="tituloDesign">Design</string>
    <string name="nomeImagemButton">Link para o quiz</string>
    <string name="tituloGrafico">Gráficos</string>
    <string name="textoDesign1">Os personagens também são visualmente interessantes. Poppy, possui um design carismático e ao mesmo tempo um tanto perturbador, com seus olhos grandes e expressivos, além de uma aparência que mistura a fofura de um brinquedo com um toque sinistro. Os outros brinquedos e personagens encontrados ao longo do jogo também são visualmente distintos, cada um com sua própria aparência única.</string>
    <string name="textoGrafico1">Os gráficos do jogo Poppy Playtime apresentam um estilo visual com uma estética que remete aos brinquedos e parques temáticos dos anos 90, o jogo utiliza uma combinação de cores vibrantes e uma atmosfera levemente nostálgica para criar uma experiência visual única.</string>
    <string name="textoGrafico2">Os ambientes do jogo são detalhados e bem trabalhados, repletos de elementos que evocam a sensação de estar em um parque de diversões abandonado. Os cenários são ricamente decorados, com brinquedos quebrados, pôsteres desgastados e uma variedade de objetos que contribuem para a imersão na atmosfera do jogo.</string>
    <string name="textoDesign2">Além disso, os efeitos visuais do jogo são bem executados, especialmente durante os momentos de suspense e tensão. O uso de iluminação e sombras contribui para criar uma atmosfera assustadora e imersiva, complementando a narrativa e os desafios que o jogador enfrenta.</string>
    <string name="textoJogabilidade">A jogabilidade se passa toda em primeira pessoa e envolve um item utilizado pelo resto do jogo, a GrabPack. Trata-se de uma mochila com duas mãos artificiais presas por fios que podem ser disparadas com o mouse para interagir com o cenário e mover objetos com física. Os quebra-cabeças do jogo envolvem acessar objetos distantes com a GrabPack e também ativar circuitos elétricos ao prender uma das mãos em uma fonte de energia e conectar a outra no circuito desejado. Um desafio extra é que os cabos das mãos podem ser obstruídos por objetos no cenário e possuem limites. Durante o jogo é possível encontrar vários dos “brinquedos” da empresa alguns podendo atacar o jogador.</string>
    <string name="textoHistoria">A história do game se passa em uma fábrica de brinquedos abandonada, a Playtime Co., uma empresa que era líder de mercado até ser fechada dez anos antes dos eventos do jogo, quando todos os seus funcionários desapareceram misteriosamente. Apenas um ex-funcionário, controlado pelo jogador, não sumiu. Ele recebe um pacote misterioso pelos correios com uma mensagem afirmando que os empregados ainda estão presos na fábrica após todo esse tempo. Ao retornar, no entanto, ele descobre que alguns dos brinquedos abandonados no local criaram vida e se tornaram vingativos, e ao longo da trama o objetivo dele é fugir da fábrica após descobrir a existência das criaturas que existem nela.</string>
    <string name="textoPersonagem">O protagonista controlado pelo jogador é um ex funcionário, que nunca foi mostrado a face, nem seu nome.</string>
    <string name="textoPersonagem4">Boxy Boo é um monstro selecionável que aparece no jogo online Project Playtime. Ele é retratado como uma figura em forma de caixa com molas conectadas ao seu corpo.</string>
    <string name="textoPersonagem5">Poppy a boneca que dá nome ao jogo primeiramente aparece em um anuncio da PlaytimeCo. “Você está prestes a ver a boneca mais incrível já inventada. Seu nome é Poppy, e ela é a primeira boneca verdadeiramente inteligente do mundo. Uma garotinha pode falar com ela, Poppy lhe dá respostas. ” E eventualmente ela vai tentar ajudar o jogador a fugir da fábrica.</string>
    <string name="textoPersonagem3">Mommy Long Legs, ou Experimento 1222 é um personagem que estreou no Capítulo 2 como seu principal antagonista. Ela é uma criatura grande com uma estranha semelhança com uma aranha, embora com apenas quatro membros.</string>
    <string name="textoPersonagem2">Experimento-1170, mais conhecido como Huggy Wuggy, é o grande antagonista no jogo Poppy Playtime, sendo também um dos mais famosos personagens. Huggy Wuggy é uma criatura alta e coberta de pelos azuis.</string>
</resources>